--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "next lint"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
@@ -27,19 +29,18 @@
     "react-dom": "^19.1.0",
     "recharts": "^2.15.1",
     "ronaldosvinicius": "file:",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@types/node": "22.14.0",
     "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.0",
     "autoprefixer": "^10.4.21",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "postcss": "^8.5.3",
-    "tailwind-merge": "^3.1.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.8.2",
-    "zustand": "^5.0.3"
+    "typescript": "5.8.2"
   }
 }
