--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "ronaldosvinicius",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,9 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -21,7 +16,6 @@
     "@radix-ui/react-switch": "^1.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
     "next": "^15.2.4",
     "next-themes": "^0.4.6",
@@ -30,8 +24,7 @@
     "recharts": "^2.15.1",
     "ronaldosvinicius": "file:",
     "tailwind-merge": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@radix-ui/react-slot": "^1.1.2",
